Replace some usages of List in databinding integration with Depset
    See
    https://github.com/bazelbuild/bazel/issues/11497#issuecomment-881698675
    https://github.com/bazelbuild/bazel/issues/12780

    RELNOTES: None
    PiperOrigin-RevId: 387460397